@@ -344,6 +344,7 @@ long GetFileInfo(const char * dirSpec, const char * name,
         } else {
             idx++;
             strncpy(gMakeDirSpec, name, idx);
+            gMakeDirSpec[idx] = '\0'; // ISSUE: http://forge.voodooprojects.org/p/chameleon/issues/270/
             name += idx;
         }
         dirSpec = gMakeDirSpec;
